--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tooltip Web Component</title>
     <script src="./tooltip.js"></script>
+    <style>
+    html{
+        --color-primary: #f00;
+    }
+
+
+    </style>
 </head>
 <body>
-    <p>Web Components is a suite of different technologies allowing you to create reusable custom elements — with their functionality encapsulated away from the rest of your code — and utilize them in your web apps. <avs-tooltip toolTipContent="create reusable custom elements — with their functionality encapsulated away from">tool tip</avs-tooltip></p>
+    <p>Web Components is a suite of different technologies allowing you to create reusable custom elements — with their functionality encapsulated away from the rest of your code — and utilize them in your web apps. <avs-tooltip toolTipContent="create reusable custom elements — with their functionality encapsulated away from"><span class="tooltip-icon-text">more..</span></avs-tooltip></p>
 </body>
-</html>
+</html> 
